Clean up collector-service

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 KAFKA_BROKERS=localhost:9092
+KAFKA_METRICS_TOPIC=metrics
+KAFKA_LOGS_TOPIC=logs
+KAFKA_TRACES_TOPIC=traces
 PORT=8080
+GOPRIVATE=github.com/Observe86/lib-proto
